arm64: dts: rockchip: rk3399: Add definition of customer demand for cpu
Signed-off-by: Finley Xiao <finley.xiao@rock-chips.com>
Change-Id: I77363fc3532d076e5026ad9e95d46426c0b2f77c

--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -1485,6 +1485,10 @@
 		wafer_info: wafer-info@1c {
 			reg = <0x1c 0x1>;
 		};
+		customer_demand: customer-demand@22 {
+			reg = <0x22 0x1>;
+			bits = <4 4>;
+		};
 	};
 
 	pmucru: pmu-clock-controller@ff750000 {
