ARM: dts: rockchip: add missing regulator settling time up property for rv1126 board
For PWM regulator, adjust voltage needs waiting time to be stable

Signed-off-by: Nickey Yang <nickey.yang@rock-chips.com>
Change-Id: I8586ece1e109f3c8ab6a3f5da8ee4e298371ef01

--- a/arch/arm/boot/dts/rv1126-bat-ipc-v10.dts
+++ b/arch/arm/boot/dts/rv1126-bat-ipc-v10.dts
@@ -80,6 +80,7 @@
 		regulator-init-microvolt = <824000>;
 		regulator-always-on;
 		regulator-boot-on;
+		regulator-settling-time-up-us = <250>;
 		pwm-supply = <&vcc_3v3>;
 	};
 
@@ -92,6 +93,7 @@
 		regulator-init-microvolt = <824000>;
 		regulator-always-on;
 		regulator-boot-on;
+		regulator-settling-time-up-us = <250>;
 		pwm-supply = <&vcc_3v3>;
 	};
 };
