lkl: add PCI device interface and a vfio backend driver
LKL is now able to manage PCI devices by itself like DPDK!
This commit implements a PCI bus driver and PCI device interface.
The commit also includes a vfio-pci backend driver as a reference
implementation, thus no extra kernel modules is needed if
the PCI device is assigned to VFIO.

I believe the vfio backend driver fulfills the need of most cases,
but users can inject wrapper functions for another userspace PCI
framework such as uio-pci-generic or a handmade kernel module.
In either case, the framework should provide physically contiguous memory
for DMA, because the kernel and some drivers (e.g. NVMe) assume its memory
as physically contiguous.

Signed-off-by: Shinichi Awamoto <shinichi.awamoto@gmail.com>

--- a/arch/lkl/include/asm/Kbuild
+++ b/arch/lkl/include/asm/Kbuild
@@ -14,8 +14,6 @@ generic-y += current.h
 generic-y += delay.h
 generic-y += device.h
 generic-y += div64.h
-generic-y += dma.h
-generic-y += dma-mapping.h
 generic-y += emergency-restart.h
 generic-y += errno.h
 generic-y += extable.h
@@ -42,7 +40,7 @@ generic-y += module.h
 generic-y += msgbuf.h
 generic-y += param.h
 generic-y += parport.h
-generic-y += pci.h
+generic-y += pci_iomap.h
 generic-y += percpu.h
 generic-y += pgalloc.h
 generic-y += poll.h
@@ -75,5 +73,6 @@ generic-y += topology.h
 generic-y += trace_clock.h
 generic-y += unaligned.h
 generic-y += user.h
+generic-y += vga.h
 generic-y += word-at-a-time.h
 generic-y += kprobes.h
