ARM: dts: rv1126: isp add cru reset
Change-Id: Iab117b7c42a3c324b91f4c572b8ed8f3bf3ede99
Signed-off-by: Cai YiWei <cyw@rock-chips.com>

--- a/arch/arm/boot/dts/rv1126.dtsi
+++ b/arch/arm/boot/dts/rv1126.dtsi
@@ -1828,6 +1828,8 @@
 		clock-names = "aclk_isp", "hclk_isp", "clk_isp";
 		assigned-clocks = <&cru ACLK_ISP>, <&cru HCLK_ISP>;
 		assigned-clock-rates = <500000000>, <250000000>;
+		resets = <&cru SRST_ISP>, <&cru SRST_ISP_RX_P>;
+		reset-names = "isp", "isp-rx-p";
 		power-domains = <&power RV1126_PD_VI>;
 		/* iommus = <&rkisp_mmu>; */
 		memory-region = <&isp_reserved>;
